# emarket

./: .dockerignore  .gitignore  README.md  version
.github/workflows/: aws-ecr.yml  docker-ws.yml  docker.yml  rust.yml  snyk.yml
deploy/local/: Makefile  docker-compose.yaml
deploy/local/cfg/grafana/: config.ini  dashboards.yaml  datasources.yaml
deploy/local/cfg/grafana/dashboards/: exported_dashboard.json  np.json
emarket/: Cargo.toml  Makefile  build.rs
emarket/src/: aggregator.rs  data.rs  entsoe.rs  lib.rs  limiter.rs  main.rs  redis.rs  utils.rs
emarket/src/ws/: config.rs  data.rs  handlers.rs  main.rs  metrics.rs  otel.rs  redis.rs
emarket/src/ws/handlers/: error.rs  live.rs  metrics.rs  mod.rs  now.rs  prices.rs  summary.rs
