[package]
name = "emarket"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
clap = { version = "4.0.2", features = ["env"] }
env_logger = "0.9.0"
log = "0.4.17"
chrono = "0.4"
serde_json = "1"
async-trait = "0.1.57"
serde = { version = "1.0", features = ["derive"] }
governor = "0.5.0"
reqwest-middleware = "0.1.6"
reqwest-retry = "0.1.5"
duration-str = "0.4.0"
backoff = { version="0.4.0", features = ["tokio"] }
futures = "0.3.24"
quick-xml = "0.27.1"
serde-xml-rs = "0.6.0"
redis = "0.22.1"
redis_ts = { version = "0.5.0", features = ['tokio-comp'] }
tokio-util = "0.7.4"
deadpool-redis = "0.11.1"

[dev-dependencies]
approx = "0.5.1"

[lib]
name = "emarket"
path = "src/lib.rs"

[[bin]]
name = "importer"
path = "src/main.rs"
