[package]
name = "emarket"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
clap = { version = "4.5", features = ["derive", "env"] }
log = "0.4"
chrono = "0.4"
serde_json = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
governor = "0.5"
reqwest-middleware = "0.1"
reqwest-retry = "0.1"
duration-str = "0.12"
backoff = { version="0.4.0", features = ["tokio"] }
futures = "0.3"
quick-xml = "0.27"
serde-xml-rs = "0.6"
redis = "0.22"
redis_ts = { version = "0.5", features = ['tokio-comp'] }
tokio-util = "0.7"
deadpool-redis = "0.11"
rand = "0.8"
chrono-tz = { version = "0.8"}
warp = "0.3"
serde_derive = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"


[dev-dependencies]
approx = "0.5"
more-asserts = "0.3"

[lib]
name = "emarket"
path = "src/lib.rs"

[[bin]]
name = "importer"
path = "src/main.rs"

[[bin]]
name = "importer-ws"
path = "src/ws/main.rs"
